@@ -1,7 +1,7 @@
 /**
 	\file "Object/def/footprint.h"
 	Data structure for each complete type's footprint template.  
-	$Id: footprint.h,v 1.23.8.3 2007/09/03 03:46:38 fang Exp $
+	$Id: footprint.h,v 1.23.8.4 2007/09/04 04:34:05 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_DEF_FOOTPRINT_H__
@@ -363,6 +363,9 @@ public:
 
 	bool
 	has_chp_footprint(void) const { return chp_footprint; }
+
+	const CHP::local_event_footprint&
+	get_chp_event_footprint(void) const { return chp_event_footprint; }
 
 	SPEC::footprint&
 	get_spec_footprint(void) { return *spec_footprint; }
