@@ -1,11 +1,12 @@
 /**
 	\file "Object/lang/CHP_footprint.cc"
-	$Id: CHP_footprint.cc,v 1.1.2.1 2007/09/02 20:49:27 fang Exp $
+	$Id: CHP_footprint.cc,v 1.1.2.2 2007/09/04 04:34:03 fang Exp $
  */
 
 #include <iostream>
 #include "Object/lang/CHP_footprint.h"
-// #include "Object/expr/expr_dump_context.h"
+#include "Object/expr/expr_dump_context.h"
+#include "sim/chpsim/graph_options.h"
 #include "util/indent.h"
 #include "util/IO_utils.h"
 
@@ -16,6 +17,20 @@ namespace CHP {
 using util::auto_indent;
 using util::write_value;
 using util::read_value;
+using SIM::CHPSIM::graph_options;
+
+//=============================================================================
+// class dot_graph_wrapper method definitions
+
+local_event_footprint::dot_graph_wrapper::dot_graph_wrapper(
+		ostream& o, const char* name) :
+		ostr(o) {
+	ostr << "digraph " << (name ? name : "G") << " {" << endl;
+}
+
+local_event_footprint::dot_graph_wrapper::~dot_graph_wrapper() {
+	ostr << '}' << endl;
+}
 
 //=============================================================================
 // class local_event_allocator method definitions
@@ -36,6 +51,32 @@ if (size()) {
 	}
 	o << auto_indent << "}" << endl;
 }
+	return o;
+}
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+/**
+	Limited version: does not do process clustering, because this
+	only applies to one process instance, also does not do channel
+	graphing because that requires dependency analysis, which is
+	unavailable before whole-program allocation.  
+	NOTE: does not wrap output in "digraph G { ... }", make
+	a dot_graph_wrapper object for that.  
+ */
+ostream&
+local_event_footprint::dump_struct_dot(
+		ostream& o, const graph_options& g) const {
+	o << "# Events: " << endl;
+	const char* const null = NULL;
+	const expr_dump_context edc(null);
+	const event_index_type es = size();
+	event_index_type i = 0;         // FIRST_VALID_EVENT;
+	// we use the 0th event to launch initial batch of events
+	for ( ; i<es; ++i) {
+		const event_type& e((*this)[i]);
+		e.dump_dot_node(o, i, g, edc) << endl;
+		// includes outgoing edges
+	}
 	return o;
 }
 
